; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_301.c_do_resize.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_301.c_do_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"Argumentx \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_resize(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [256 x i8], align 16
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %5, align 4
  %6 = getelementptr inbounds [256 x i8], [256 x i8]* %4, i64 0, i64 0
  %7 = call i32 @memset(i8* %6, i32 0, i32 256)
  %8 = getelementptr inbounds [256 x i8], [256 x i8]* %4, i64 0, i64 0
  %9 = call i32 @memset(i8* %8, i32 255, i32 255)
  %10 = getelementptr inbounds [256 x i8], [256 x i8]* %4, i64 0, i64 254
  store i8 10, i8* %10, align 2
  %11 = getelementptr inbounds [256 x i8], [256 x i8]* %4, i64 0, i64 0
  %12 = call i32 @strlen(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %13 = call i32 @memcpy(i8* %11, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = getelementptr inbounds [256 x i8], [256 x i8]* %4, i64 0, i64 118
  store i8 0, i8* %14, align 2
  %15 = getelementptr inbounds [256 x i8], [256 x i8]* %4, i64 0, i64 0
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @zwrite(i8* %15, i32 255, i32 %16)
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @zflush(i32 %18)
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @zwrite(i8*, i32, i32) #1

declare dso_local i32 @zflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
